# slot-machine

./: .gitignore  Cargo.toml  README.md  Technician.rs
src/: Commissioner_cargo_test  commisioner.rs  game_logic.rs  hold_game.rs  main.rs  multiwin.rs  user.rs
src/authentication/: auth.rs  authorization.rs  brute_force.rs  mod.rs
src/cryptography/: crypto.rs  mod.rs  rng.rs
src/db/: db.rs  dbinitialize.rs  dbqueries.rs  encryption.rs  mod.rs  validator.rs
src/interfaces/: comissioner_tests.rs  commisioner.rs  main.rs  menus.rs  mod.rs  technician.rs  user.rs
src/logger/: logger.rs  mod.rs  verification.rs
src/play/: holding.rs  mod.rs  multiwin.rs  slots.rs  wheelOfFortune.rs
src/validation/: game_validation.rs  mod.rs  validators.rs
