[package]
name = "slots"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
colored = "3.0.0"
chrono = "0.4.42"
rand_chacha = "0.9.0"
rand = "0.9.2"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
base64 = "0.22.0"
lazy_static = "1.4.0"
clearscreen = "4.0.2"
dialoguer = "0.12.0"
console = "0.16.1"
hex = "0.4.3"
dotenvy = "0.15.7"